fill in some MAX Dashboard content

--- a/src/content/docs/en/api/10_getting-started/index.mdx
+++ b/src/content/docs/en/api/10_getting-started/index.mdx
@@ -1,10 +1,10 @@
 ---
 title: "Getting Started"
-description: "How to start monetizing your mobile app with MAX in seven easy steps."
+description: "Getting Started"
 category-title: Getting Started
-slug: en/api/getting-started
+slug: en/max/getting-started
+type: category
 ---
-
 This guide shows you how to start <Glossary>monetizing your mobile app [mobile app monetization]</Glossary> with MAX in seven easy steps, incorporating best practices to help you automate daily tasks and maximize revenue.
 
 <Callout type="important">
