--- a/src/content/docs/en/api/10_getting-started/prelaunch-checklist.mdx
+++ b/src/content/docs/en/api/10_getting-started/prelaunch-checklist.mdx
@@ -1,8 +1,9 @@
 ---
 title: "Pre-Launch Checklist"
 description: "Use this quick checklist to validate your MAX integration before you launch your app."
-category-title: Pre-Launch Checklist
-slug: en/api/prelaunch-checklist
+slug: en/api/getting-started/prelaunch-checklist
+sidebar-position: 2
+sidebar-label: Pre-Launch Checklist
 ---
 
   Use this quick checklist to validate your MAX integration before you launch your app:
