more pages, tweaks, images

--- a/src/content/docs/en/api/15_max-dashboard/30_reports/20_user-activity-reporting.mdx
+++ b/src/content/docs/en/api/15_max-dashboard/30_reports/20_user-activity-reporting.mdx
@@ -1,6 +1,6 @@
 ---
 title: "User Activity Reporting"
-description: ""
+description: "The MAX User Activity report delivers daily analytics on your audience and ad engagement for each ad format."
 slug: en/api/max-dashboard/reports/user-activity-reporting
 ---
 The MAX User Activity report ([<UILabel>MAX &gt; Mediation &gt; Analyze &gt; User Activity</UILabel>](https://dash.applovin.com/o/mediation/pub_adv_user_activity)) delivers daily analytics on your audience and <Glossary>ad engagement</Glossary> for each ad format.
