more pages, images, partials

--- a/src/content/docs/en/api/10_getting-started/index.mdx
+++ b/src/content/docs/en/api/10_getting-started/index.mdx
@@ -11,6 +11,12 @@ This guide shows you how to start <Glossary>monetizing your mobile app [mobile a
 Review AppLovin’s [Account Best Practices](https://dash.applovin.com/documentation/mediation/ui-max/account/best-practices) to ensure your account setup is compliant with AppLovin’s policies and reduce the risk of disruption to your ad serving.
 </Callout>
 
+<Callout type="note">
+AppLovin is not a a part of the Families Self Certified Ads <Abbr>SDK</Abbr> Program.
+According to Google if your app is designed for children or includes children you must adhere to [Google Play’s Families Policy Requirements](https://support.google.com/googleplay/android-developer/topic/9877766#!?zippy_activeEl=families-policy#families-policy) and use only [Families Self-Certified Ads <Abbr>SDK</Abbr>s](https://support.google.com/googleplay/android-developer/answer/9900633/?sjid=4660822843944323705-NC).
+For more information, see the Privacy documentation page for your platform.
+</Callout>
+
 ## Step 1. Create an Account
 To get started with MAX, open [dash.applovin.com](https://dash.applovin.com), click [<UILabel>Sign Up for a New Account</UILabel>](https://dash.applovin.com/signup), and enter your account information. MAX then asks you to authenticate your account so you can complete the signup process.
 
